[package]
name = "aoc-2021"
version = "0.1.0"
authors = ["Ben Sully <ben@bsull.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.52"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
hashbrown = "0.12"
itertools = "0.10.3"
mimalloc = { version = "0.1.27", default-features = false }
once_cell = "1.9.0"
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_scan = "0.4.1"
serde_with = "1.11.0"
serde_yaml = "0.8.23"
strum = { version = "0.23.0", features = ["derive"] }

[profile.release]
debug = true
